syntax = "proto3";

message CustomerPic {
	string name = 1;
	string phone = 2;
}

message Customer {
	uint32 id = 1;
	string code = 2;
	string name = 3;
	string address = 4;
	string phone = 5;
	string fax = 6;
	string created_at = 7;
	string updated_at = 8;
	CustomerPic pic = 9;
}

message CustomerList {
	repeated Customer customers = 1;
}
