syntax = "proto3";

message User {
	uint32 id = 1;
	string name = 2;
	string email = 3;
	uint32 role_id = 4;
	string created_at = 5;
	string updated_at = 6;
}

message UserList {
	repeated User users = 1;
}
